--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack serve --open",
     "build": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
