--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "webpack serve --open",
     "build": "webpack --mode production",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d ./dist/client"
   },
   "eslintConfig": {
     "extends": [
@@ -58,6 +59,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^4.0.1",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "gh-pages": "^5.0.0",
     "ts-node": "^10.9.1",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
